# MINFLUX_msr_reader

./: LICENSE  README.md  minflux_msr_reader.spec  pyproject.toml  pytest.ini  run_app.py  run_app.spec
SpecPy-Python3.12.4-NumPy2.0.0/: pyproject.toml  setup.py
SpecPy-Python3.12.4-NumPy2.0.0/specpy/: __init__.py  _specpy.pyd
SpecPy-Python3.12.4-NumPy2.0.0/specpy/specpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
minflux_msr/: __init__.py  io.py  msr_parser.py  msr_test_parser.py
ui_tk/: app.py  app_old.py  field_dialog.py  plot_window.py
